--- a/src/styles/views/Login.scss
+++ b/src/styles/views/Login.scss
@@ -2,7 +2,7 @@
 
 .login {
   &.container {
-    margin-top: 2em;
+    //margin-top: 2em;
     min-height: 300px;
     /* we include the center mixin defined in _theme.scss and save three duplicate lines :) */
     @include center;
