Adjusted Lobby Layout

--- a/src/styles/ui/main.scss
+++ b/src/styles/ui/main.scss
@@ -8,3 +8,9 @@ body {
   font-family: 'Londrina Solid', cursive;
   // Other global styles
 }
+
+.background-image-lobby {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
