Add a dialog field to enter the lobby Code
-Added a dialog field for entering the lobby code.
I wanted to customize the dialog, but currently it's flickering upon entering something.

--- a/src/styles/ui/main.scss
+++ b/src/styles/ui/main.scss
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@100;300;400;900&display=swap');
 
+/*
+@font-face {
+  font-family: 'Londrina Solid';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Londrina Solid'), url('https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@100;300;400;900&display=swap') format('woff2');
+} */
+
 body {
   margin: 0;
   padding: 0;
