colored names everywhere

--- a/src/styles/views/Game.scss
+++ b/src/styles/views/Game.scss
@@ -45,6 +45,7 @@
   &.name {
     font-weight: 300;
     margin-left: 5px;
+    color: var(--player-color);
   }
   &.username {
     font-weight: 500;
