--- a/src/styles/ui/main.scss
+++ b/src/styles/ui/main.scss
@@ -1,3 +1,4 @@
+//This line should be commented out and the font dynamically loaded on consent
 @import url('https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@100;300;400;900&display=swap');
 
 /*
